# binary-orphans

./: .gitignore  .travis.meta.yml  .travis.yml  CHANGELOG.md  README.md  binary-orphans.cabal  cabal.1.config  cabal.binary-0.8.4.x.config  cabal.project  package.yaml  stack-ghc-8.0.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
src/Data/Binary/: Orphans.hs
test/: Tests.hs
