cabal-version:      1.12
name:               binary-orphans
version:            1.0.6
synopsis:           Compatibility package for binary; provides instances
category:           Data, Binary, Parsing, Compatibility
description:
  This package provides instances defined in later versions of @binary@ package
  .
  Prior version 1 this packages provided instances for other packages.
  That functionality is moved to [binary-instances](https://hackage.haskell.org/package/binary-instances) package.

build-type:         Simple
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD3
license-file:       LICENSE
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.3
   || ==9.12.4
   || ==9.14.1

extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/phadej/binary-orphans.git

flag base-ge-4-16
  description: @base >=4.16@ (GHC-9.2)
  default:     True
  manual:      False

flag base-ge-4-17
  description: @base >=4.17@ (GHC-9.4)
  default:     True
  manual:      False

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Data.Binary.Orphans
  other-extensions: CPP
  build-depends:
      base    >=4.12.0.0 && <4.23
    , binary  >=0.8.6.0  && <0.8.10

  if !flag(base-ge-4-16)
    build-depends: OneTuple >=0.4.2 && <0.5

  if !flag(base-ge-4-17)
    build-depends: data-array-byte >=0.1.0.1 && <0.2

  if flag(base-ge-4-16)
    build-depends: base >=4.16

  else
    build-depends: base <4.16

  if flag(base-ge-4-17)
    build-depends: base >=4.17

  else
    build-depends: base <4.17

test-suite binary-orphans-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
  build-depends:
      base
    , binary
    , binary-orphans
    , QuickCheck            >=2.13.1   && <2.19
    , quickcheck-instances  >=0.3.28   && <0.5
    , tasty                 >=0.10.1.2 && <1.6
    , tasty-quickcheck      >=0.8.3.2  && <0.12

  if !flag(base-ge-4-17)
    build-depends: data-array-byte
